--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.drawer-side a.active {
+    color: rgb(255, 227, 185);
+    background-color: rgba(11, 11, 37, 0.767);
+  }
